--- a/RunTimeAppliance/shell/logrotate.conf
+++ b/RunTimeAppliance/shell/logrotate.conf
@@ -1,7 +1,7 @@
 ##Common section START
 compress
 
-/var/log/nursery/OSA/doAppliance.log  {
+/var/log/OSA/doAppliance.log  {
     rotate 5
     daily
     postrotate
@@ -9,7 +9,7 @@ compress
         chown www-data:www-data doAppliance.log
     endscript
 }
-/var/log/nursery/OSA/doVHAppliance.log  {
+/var/log/OSA/doVHAppliance.log  {
     rotate 5
     daily
     postrotate
@@ -17,75 +17,75 @@ compress
         chown www-data:www-data doAppliance.log
     endscript
 }
-/var/log/nursery/OSA/local/main.access.log  {
+/var/log/OSA/local/main.access.log  {
     rotate 5
     daily
 }
-/var/log/nursery/OSA/local/main.error.log  {
+/var/log/OSA/local/main.error.log  {
     rotate 5
     daily
 }
-/var/log/nursery/OSA/local/rewrite.log  {
+/var/log/OSA/local/rewrite.log  {
     rotate 5
     daily
 }
-/var/log/nursery/OSA/admin/main.access.log  {
+/var/log/OSA/admin/main.access.log  {
     rotate 5
     daily
 }
-/var/log/nursery/OSA/admin/main.error.log  {
+/var/log/OSA/admin/main.error.log  {
     rotate 5
     daily
 }
-/var/log/nursery/OSA/admin/rewrite.log  {
+/var/log/OSA/admin/rewrite.log  {
     rotate 5
     daily
 }
 ##Common section END
 ##Nodes section START
-##Node HTTP START
-/var/log/nursery/OSA/HTTP/main.access.log  {
-    rotate 5
-    daily
-    postrotate
-		touch  /var/log/nursery/OSA/HTTP/main.access.log
-    endscript
-}
-/var/log/nursery/OSA/HTTP/main.error.log  {
-    rotate 5
-    daily
-    postrotate
-		touch  /var/log/nursery/OSA/HTTP/main.error.log
-    endscript
-}
-/var/log/nursery/OSA/HTTP/rewrite.log  {
-    rotate 5
-    daily
-    postrotate
-		touch  /var/log/nursery/OSA/HTTP/rewrite.log
-    endscript
-}
-##Node HTTP END
 ##Node HTTPS START
-/var/log/nursery/OSA/HTTPS/main.access.log  {
+/var/log/OSA/HTTPS/main.access.log  {
     rotate 5
     daily
     postrotate
-		touch  /var/log/nursery/OSA/HTTPS/main.access.log
+		touch  /var/log/OSA/HTTPS/main.access.log
     endscript
 }
-/var/log/nursery/OSA/HTTPS/main.error.log  {
+/var/log/OSA/HTTPS/main.error.log  {
     rotate 5
     daily
     postrotate
-		touch  /var/log/nursery/OSA/HTTPS/main.error.log
+		touch  /var/log/OSA/HTTPS/main.error.log
     endscript
 }
-/var/log/nursery/OSA/HTTPS/rewrite.log  {
+/var/log/OSA/HTTPS/rewrite.log  {
     rotate 5
     daily
     postrotate
-		touch  /var/log/nursery/OSA/HTTPS/rewrite.log
+		touch  /var/log/OSA/HTTPS/rewrite.log
     endscript
 }
 ##Node HTTPS END
+##Node HTTP START
+/var/log/OSA/HTTP/main.access.log  {
+    rotate 5
+    daily
+    postrotate
+		touch  /var/log/OSA/HTTP/main.access.log
+    endscript
+}
+/var/log/OSA/HTTP/main.error.log  {
+    rotate 5
+    daily
+    postrotate
+		touch  /var/log/OSA/HTTP/main.error.log
+    endscript
+}
+/var/log/OSA/HTTP/rewrite.log  {
+    rotate 5
+    daily
+    postrotate
+		touch  /var/log/OSA/HTTP/rewrite.log
+    endscript
+}
+##Node HTTP END
