--- a/RunTimeAppliance/apache/conf/samples/basic/appliance.conf
+++ b/RunTimeAppliance/apache/conf/samples/basic/appliance.conf
@@ -24,7 +24,7 @@ RequestHeader unset X-Forwarded-Server
 	AuthMySQLCheckUserQuotas On
 
 	
-	ProxyPassReverseCookieDomain backendserver p-nursery-dev
+	ProxyPassReverseCookieDomain backendDomain fontendDomain
 	ProxyPassReverseCookiePath /  /quotas2
 
 	ProxyPass http://backendserver/URI
@@ -46,7 +46,7 @@ RequestHeader unset X-Forwarded-Server
 	AuthMySQLCheckUserQuotas Off
 
 	
-	ProxyPassReverseCookieDomain backendserver p-nursery-dev
+	ProxyPassReverseCookieDomain backendDomain frontendDomain
 	ProxyPassReverseCookiePath /  /quotas1
 
 	ProxyPass http://backendserver/URI
@@ -67,7 +67,7 @@ RequestHeader unset X-Forwarded-Server
 	AuthMySQLCheckUserQuotas Off
 
 	
-	ProxyPassReverseCookieDomain backendserver p-nursery-dev
+	ProxyPassReverseCookieDomain backendDomain frontendDomain
 	ProxyPassReverseCookiePath /  /identity
 
 	ProxyPass http://backendserver/URI
@@ -89,7 +89,7 @@ RequestHeader unset X-Forwarded-Server
 	AuthMySQLCheckUserQuotas Off
 
 	
-	ProxyPassReverseCookieDomain .uri p-nursery-dev
+	ProxyPassReverseCookieDomain .uri frontendDomain
 	ProxyPassReverseCookiePath /  /auth
 
 	ProxyPass http://backendserver.uri
