--- a/RunTimeAppliance/shell/envvars.sh.sample
+++ b/RunTimeAppliance/shell/envvars.sh.sample
@@ -128,5 +128,5 @@ APPLIANCE_MYSQL_PORT=3306
 ######################################################
 # Global configuration section
 ######################################################
-INSTALL_DIR=/usr/local/nursery/ApplianceManager
-LOG_DIR=/var/log/nursery/OSA
+INSTALL_DIR=/usr/local/ApplianceManager
+LOG_DIR=/var/log/OSA
