--- a/RunTimeAppliance/shell/logrotate.conf
+++ b/RunTimeAppliance/shell/logrotate.conf
@@ -5,73 +5,83 @@ compress
     rotate 5
     daily
     postrotate
-        touch /var/log/OSA/doAppliance.log.
-        chown www-data:www-data doAppliance.log
+        touch /var/log/OSA/doAppliance.log
+        chown www-data:www-data /var/log/OSA/doAppliance.log
     endscript
 }
 /var/log/OSA/doVHAppliance.log  {
     rotate 5
     daily
     postrotate
-        touch /var/log/OSA/doAppliance.log.
-        chown www-data:www-data doAppliance.log
+        touch /var/log/OSA/doVHAppliance.log
+        chown www-data:www-data /var/log/OSA/doVHAppliance.log
+    endscript
+}
+/var/log/OSA/enabDisabVH.log  {
+    rotate 5
+    daily
+    postrotate
+        touch /var/log/OSA/enabDisabVH.log
+        chown www-data:www-data /var/log/OSA/enabDisabVH.log
     endscript
 }
 /var/log/OSA/local/main.access.log  {
     rotate 5
     daily
+    postrotate
+		touch  /var/log/OSA/local/main.access.log
+		chown  www-data:www-data /var/log/OSA/HTTP/main.access.log
+    endscript
 }
 /var/log/OSA/local/main.error.log  {
     rotate 5
     daily
+    postrotate
+		touch  /var/log/OSA/local/main.access.log
+		chown  www-data:www-data /var/log/OSA/HTTP/main.error.log
+    endscript
 }
 /var/log/OSA/local/rewrite.log  {
     rotate 5
     daily
+    postrotate
+		touch  /var/log/OSA/local/main.access.log
+		chown  www-data:www-data /var/log/OSA/HTTP/rewrite.log
+    endscript
 }
 /var/log/OSA/admin/main.access.log  {
     rotate 5
     daily
+    postrotate
+		touch  /var/log/OSA/admin/main.access.log
+		chown  www-data:www-data /var/log/OSA/HTTP/main.access.log
+    endscript
 }
 /var/log/OSA/admin/main.error.log  {
     rotate 5
     daily
+    postrotate
+		touch  /var/log/OSA/admin/main.access.log
+		chown  www-data:www-data /var/log/OSA/HTTP/main.error.log
+    endscript
 }
 /var/log/OSA/admin/rewrite.log  {
     rotate 5
     daily
+    postrotate
+		touch  /var/log/OSA/admin/main.access.log
+		chown  www-data:www-data /var/log/OSA/HTTP/rewrite.log
+    endscript
 }
 ##Common section END
 ##Nodes section START
-##Node HTTPS START
-/var/log/OSA/HTTPS/main.access.log  {
-    rotate 5
-    daily
-    postrotate
-		touch  /var/log/OSA/HTTPS/main.access.log
-    endscript
-}
-/var/log/OSA/HTTPS/main.error.log  {
-    rotate 5
-    daily
-    postrotate
-		touch  /var/log/OSA/HTTPS/main.error.log
-    endscript
-}
-/var/log/OSA/HTTPS/rewrite.log  {
-    rotate 5
-    daily
-    postrotate
-		touch  /var/log/OSA/HTTPS/rewrite.log
-    endscript
-}
-##Node HTTPS END
 ##Node HTTP START
 /var/log/OSA/HTTP/main.access.log  {
     rotate 5
     daily
     postrotate
 		touch  /var/log/OSA/HTTP/main.access.log
+		chown  www-data:www-data /var/log/OSA/HTTP/main.access.log
     endscript
 }
 /var/log/OSA/HTTP/main.error.log  {
@@ -79,6 +89,7 @@ compress
     daily
     postrotate
 		touch  /var/log/OSA/HTTP/main.error.log
+		chown  www-data:www-data /var/log/OSA/HTTP/main.error.log
     endscript
 }
 /var/log/OSA/HTTP/rewrite.log  {
@@ -86,6 +97,59 @@ compress
     daily
     postrotate
 		touch  /var/log/OSA/HTTP/rewrite.log
+		chown  www-data:www-data /var/log/OSA/HTTP/rewrite.log
     endscript
 }
 ##Node HTTP END
+##Node HTTPS START
+/var/log/OSA/HTTPS/main.access.log  {
+    rotate 5
+    daily
+    postrotate
+		touch  /var/log/OSA/HTTPS/main.access.log
+		chown  www-data:www-data /var/log/OSA/HTTPS/main.access.log
+    endscript
+}
+/var/log/OSA/HTTPS/main.error.log  {
+    rotate 5
+    daily
+    postrotate
+		touch  /var/log/OSA/HTTPS/main.error.log
+		chown  www-data:www-data /var/log/OSA/HTTPS/main.error.log
+    endscript
+}
+/var/log/OSA/HTTPS/rewrite.log  {
+    rotate 5
+    daily
+    postrotate
+		touch  /var/log/OSA/HTTPS/rewrite.log
+		chown  www-data:www-data /var/log/OSA/HTTPS/rewrite.log
+    endscript
+}
+##Node HTTPS END
+##Node zobby START
+/var/log/OSA/zobby/main.access.log  {
+    rotate 5
+    daily
+    postrotate
+		touch  /var/log/OSA/zobby/main.access.log
+		chown  www-data:www-data /var/log/OSA/zobby/main.access.log
+    endscript
+}
+/var/log/OSA/zobby/main.error.log  {
+    rotate 5
+    daily
+    postrotate
+		touch  /var/log/OSA/zobby/main.error.log
+		chown  www-data:www-data /var/log/OSA/zobby/main.error.log
+    endscript
+}
+/var/log/OSA/zobby/rewrite.log  {
+    rotate 5
+    daily
+    postrotate
+		touch  /var/log/OSA/zobby/rewrite.log
+		chown  www-data:www-data /var/log/OSA/zobby/rewrite.log
+    endscript
+}
+##Node zobby END
