--- a/RunTimeAppliance/shell/logrotate.conf
+++ b/RunTimeAppliance/shell/logrotate.conf
@@ -1,28 +1,12 @@
 ##Common section START
 compress
 
-/var/log/OSA/doAppliance.log  {
+/var/log/OSA/*.log  {
     rotate 5
     daily
     postrotate
         touch /var/log/OSA/doAppliance.log
         chown www-data:www-data /var/log/OSA/doAppliance.log
-    endscript
-}
-/var/log/OSA/doVHAppliance.log  {
-    rotate 5
-    daily
-    postrotate
-        touch /var/log/OSA/doVHAppliance.log
-        chown www-data:www-data /var/log/OSA/doVHAppliance.log
-    endscript
-}
-/var/log/OSA/enabDisabVH.log  {
-    rotate 5
-    daily
-    postrotate
-        touch /var/log/OSA/enabDisabVH.log
-        chown www-data:www-data /var/log/OSA/enabDisabVH.log
     endscript
 }
 /var/log/OSA/local/main.access.log  {
@@ -127,29 +111,3 @@ compress
     endscript
 }
 ##Node HTTPS END
-##Node zobby START
-/var/log/OSA/zobby/main.access.log  {
-    rotate 5
-    daily
-    postrotate
-		touch  /var/log/OSA/zobby/main.access.log
-		chown  www-data:www-data /var/log/OSA/zobby/main.access.log
-    endscript
-}
-/var/log/OSA/zobby/main.error.log  {
-    rotate 5
-    daily
-    postrotate
-		touch  /var/log/OSA/zobby/main.error.log
-		chown  www-data:www-data /var/log/OSA/zobby/main.error.log
-    endscript
-}
-/var/log/OSA/zobby/rewrite.log  {
-    rotate 5
-    daily
-    postrotate
-		touch  /var/log/OSA/zobby/rewrite.log
-		chown  www-data:www-data /var/log/OSA/zobby/rewrite.log
-    endscript
-}
-##Node zobby END
