--- a/RunTimeAppliance/apache/module/mysql/Makefile.am
+++ b/RunTimeAppliance/apache/module/mysql/Makefile.am
@@ -28,8 +28,8 @@ LDLIBS = @LDLIBS@
 
 all : mod_osa.la
 
-mod_osa.la : mod_osa.c
-	$(APXS) -c $(CPPFLAGS) $(CFLAGS) $(LDFLAGS) $(LDLIBS) $(MYSQL_CFLAGS) $(MYSQL_LIBS) $(MYSQL_LIB_DIR) mod_osa.c
+mod_osa.la : mod_osa.c ../base/osa_base.h ../base/osa_base.c
+	$(APXS) -c $(CPPFLAGS) $(CFLAGS) $(LDFLAGS) $(LDLIBS) $(MYSQL_CFLAGS) $(MYSQL_LIBS) $(MYSQL_LIB_DIR) ../base/osa_base.c mod_osa.c
 
 $(DESTDIR)$(LIBEXECDIR) :
 	mkdir -p $@
