--- a/RunTimeAppliance/apache/module/sqlite/Makefile.am
+++ b/RunTimeAppliance/apache/module/sqlite/Makefile.am
@@ -25,10 +25,11 @@ CFLAGS = @CFLAGS@
 LDFLAGS = @LDFLAGS@
 LDLIBS = @LDLIBS@
 
+
 all : mod_osa.la
 
-mod_osa.la : mod_osa.c
-	$(APXS) -c $(CPPFLAGS) $(CFLAGS) $(LDFLAGS) $(LDLIBS) $(SQLITE3_CFLAGS) $(SQLITE3_LIBS) mod_osa.c
+mod_osa.la : mod_osa.c ../base/osa_base.h ../base/osa_base.c
+	$(APXS) -c $(CPPFLAGS) $(CFLAGS) $(LDFLAGS) $(LDLIBS) $(SQLITE3_CFLAGS) $(SQLITE3_LIBS) mod_osa.c ../base/osa_base.c
 
 $(DESTDIR)$(LIBEXECDIR) :
 	mkdir -p $@
