--- a/RunTimeAppliance/apache/module/mysql/osa.conf
+++ b/RunTimeAppliance/apache/module/mysql/osa.conf
@@ -1,3 +1,8 @@
 <IfModule mod_osa.c>
+        # Use a custom location for cache datafile (module expect directory to exists with proper permissions)
+        # OSACacheFile /var/cache/apache2/mod_rpdp/cache.db #use default size for cache
+        # OSACacheFile /var/cache/apache2/mod_rpdp/cache.db(XXXX) #Where XXXX is cache size in bytes
+
+        #OSACacheFile /tmp/osa.cache(10485760)
 
 </IfModule>
