Cache provider conf in apache module conf file

--- a/RunTimeAppliance/apache/module/mysql/osa.conf
+++ b/RunTimeAppliance/apache/module/mysql/osa.conf
@@ -2,7 +2,7 @@
 	# use shmcb memory cache (require socache_shmcb module) and set its size
         OSACacheFile shmcb:${APACHE_RUN_DIR}/osa.cache(10485760)
 
-	# use dbm berkey DB (require socache_dbm)
+	# use dbm berkley DB (require socache_dbm)
         #OSACacheFile dbm:${APACHE_RUN_DIR}/osa.cache.db
 
 	# use memcached (require socache_memcache)
