--- a/RunTimeAppliance/apache/module/sqlite/osa.conf
+++ b/RunTimeAppliance/apache/module/sqlite/osa.conf
@@ -1,8 +1,11 @@
 <IfModule mod_osa.c>
-        # Use a custom location for cache datafile (module expect directory to exists with proper permissions)
-        # OSACacheFile /var/cache/apache2/osa/cache.db #use default size for cache
-        # OSACacheFile /var/cache/apache2/osa/cache.db(XXXX) #Where XXXX is cache size in bytes
+	# use shmcb memory cache (require socache_shmcb module) and set its size
+        OSACacheFile shmcb:${APACHE_RUN_DIR}/osa.cache(10485760)
 
-        #OSACacheFile /tmp/osa.cache(10485760)
+	# use dbm berkley DB (require socache_dbm)
+        #OSACacheFile dbm:${APACHE_RUN_DIR}/osa.cache.db
+
+	# use memcached (require socache_memcache)
+	#OSACAcheFile memcache:127.0.0.1:11211
 
 </IfModule>
